syntax = "proto3";

package telegram;

option java_package = "com.proto.telegram";
option java_multiple_files = true;

message Request {
  string bot_token = 1;
}

message Response {
  bool ok = 1;
  Result result = 2;
}

message Result {
  int64 id = 1;
  bool is_bot = 2;
  string first_name = 3;
  string username = 4;
  bool can_join_groups = 5;
  bool can_read_all_group_messages = 6;
  bool supports_inline_queries = 7;
}

service InfoService {

  rpc GetMe(Request) returns (Response) {};

}
